add validation step after update of schema

--- a/pandera-intro.ipynb
+++ b/pandera-intro.ipynb
@@ -360,6 +360,17 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "schema.validate(df, lazy=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "Now let us differentiate between the data types for the signed and unsigned integer. A possibility to do this is by working with [pandera Checks](https://pandera.readthedocs.io/en/stable/reference/generated/pandera.api.checks.Check.html)."
