rename files; remove empty cell

--- a/pandera-intro.ipynb
+++ b/pandera-intro.ipynb
@@ -481,7 +481,7 @@
    "source": [
     "inferred_schema.to_json(os.path.join(\"dummy_data\", \"inferred_dummy_schema.json\"), indent=2)\n",
     "inferred_schema.to_script(os.path.join(\"dummy_data\", \"inferred_dummy_schema.py\"))\n",
-    "# TODO: open the schema (choose one of the two files and edit it)"
+    "# TODO: open the schema (choose one of the two files and edit it. For the json, you may have to right click on it and explicitly open it with an editor)"
    ],
    "metadata": {
     "collapsed": false
@@ -517,15 +517,6 @@
    "source": [
     "Saving the schema as a file is useful if you want to include data validation in your data pipeline. It also makes versioning of your data schema easier."
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
